facilitator/facilitator-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: facilitator
spec:
  selector:
    matchLabels:
      app: facilitator
  serviceName: facilitator
  replicas: 1   
  template:
    metadata:
      labels:
        app: facilitator
    spec:
      containers:
      - env:
        - name: SPRING_PROFILES_ACTIVE
          value: prod
        name: facilitator
        readinessProbe:
          httpGet:
            path: /
            port: 8080
        image: gcr.io/maximal-brace-238118/facilitator:latest
        imagePullPolicy: Always            
        ports:
        - containerPort: 8080
          name: facilitator
          protocol: TCP
