facilitator/facilitator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: facilitator-service
spec:
  selector:
    app: facilitator
  type: NodePort    
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
